<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_messageBox"
            android:icon="@drawable/ic_message"
            android:title= "@string/message_box"
            />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat"
            />
            </group>

    <item android:title="@string/communication"/>
    <group>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send"
            android:title="@string/send"/>
    </group>
</menu>